--- a/kakuyomu.css
+++ b/kakuyomu.css
@@ -1,3 +1,23 @@
-#p1 {
-    color: red;
+@charset "utf-8";
+
+/* Chacha */
+#p5,#p14,#p17,#p20,#p28,#p35,#p37,#p39,#p45,#p47,#p49,#p54,#p56,#p58,#p60,#p63,#p70,#p77,#p79,#p82,#p84,#p86,#p89,#p91 {
+    color:crimson;
+}
+
+/* Hatsu */
+#p6,#p16,#p19,#p21,#p23,#p25,#p27,#p29,#p31,#p36,#p40,#p42,#p44,#p48,#p50,#p55,#p59,#p62,#p64,#p66,#p68,#p72,#p80,#p83,#p85,#p87,#p92 {
+    color:darkorange;
+}
+
+/* Go */
+#p7,#p15,#p18,#p22,#p24,#p26,#p30,#p38,#p41,#p43,#p46,#p57,#p61,#p65,#p67,#p69,#p71,#p73,#p78,#p81,#p88,#p90,#p93 {
+    color:hotpink;
+}
+
+#p5,#p14,#p17,#p20,#p28,#p35,#p37,#p39,#p45,#p47,#p49,#p54,#p56,#p58,#p60,#p63,#p70,#p77,#p79,#p82,#p84,#p86,#p89,#p91,
+#p6,#p16,#p19,#p21,#p23,#p25,#p27,#p29,#p31,#p36,#p40,#p42,#p44,#p48,#p50,#p55,#p59,#p62,#p64,#p66,#p68,#p72,#p80,#p83,#p85,#p87,#p92,
+#p7,#p15,#p18,#p22,#p24,#p26,#p30,#p38,#p41,#p43,#p46,#p57,#p61,#p65,#p67,#p69,#p71,#p73,#p78,#p81,#p88,#p90,#p93 {
+    border: 1px solid orange;
+    border-radius: 4px;
 }
